[project]
name = "miscutils"
version = "0.1.0"
description = "uncategorized utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1",
    "loguru>=0.7.3",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
ignoreUnusedVariableNames = ["^unused_.*", "^_.*"]
ignoreUnusedParameterNames = ["^unused_.*", "^_.*"]

[tool.setuptools]
py-modules = ["miscutils"]

[tool.setuptools.packages.find]
where = ["."]
include = ["miscutils*"]
